# cioos-metadata-conversion

./: .env.sample  .gitignore  CODEOWNERS  Dockerfile  README.md  action.yaml  docker-compose.yml  pyproject.toml  test_result.xml
.github/workflows/: run-tests.yaml
cioos_metadata_conversion/: __main__.py  acdd.py  api.py  cioos.py  cioos_citation.py  citation_cff.py  converter.py  datacite.py  eml.py  erddap.py  firebase_to_cioos.py  record.py
hakai_metadata_conversion/: __main__.py  citation_cff.py  erddap.py  utils.py  xml.py
sync/: action.yaml
tests/: conftest.py  test_citation_cff.py  test_cli.py  test_datacite.py  test_eml.py  test_erddap.py  test_record_class.py  test_xml.py
tests/erddap_xmls/: test_datasets.xml
tests/erddap_xmls/datasets.d/: test_dataset.xml
tests/firebase-records/: some_english_title__copy__anot_041d7.json  some_english_title__copy__anot_041d7_eml.xml  test_record.json
tests/records/: test_record1.yaml
tests/records/firebase/: cioos-metadata-form-8d942-default-rtdb--OTS9E-8LKZrL_Yuggg0-export.json
